# parquet-key-management-rs

./: .gitignore  Cargo.lock.msrv  Cargo.toml  README.md  tombi.toml
.github/workflows/: check-required.yml  ci.yml
ci/: run_integration_tests.sh
datafusion-parquet-key-management/: Cargo.toml  README.md
datafusion-parquet-key-management/src/: lib.rs
datafusion-parquet-key-management/tests/: round_trip.rs
generate-test-files/: Cargo.toml
generate-test-files/src/: main.rs
parquet-key-management/: Cargo.toml
parquet-key-management/src/: async_crypto_factory.rs  config.rs  crypto_factory.rs  datafusion.rs  key_encryption.rs  key_material.rs  key_unwrapper.rs  key_wrapper.rs  kms.rs  kms_manager.rs  lib.rs
parquet-key-management/src/async_kms/: key_unwrapper.rs  key_wrapper.rs  kms_manager.rs  mod.rs  test.rs
parquet-key-management/src/kms/: key_unwrapper.rs  key_wrapper.rs  kms_manager.rs  mod.rs  test.rs
parquet-key-management/src/kms/async_impl/: bridge.rs  mod.rs  reenter_async.rs
parquet-key-management/src/test_kms/: mod.rs
parquet-key-management/src/test_kms/async_impl/: mod.rs  wrap.rs
parquet-key-management/tests/: async_round_trip.rs  commands_with_encryption.rs  datafusion_round_trip.rs  delta_rs_kms.rs  integration_tests.rs  key_material.rs  kms_encryption.rs  round_trip.rs
pyarrow-integration-tests/: pyproject.toml
pyarrow-integration-tests/src/pyarrow_integration_tests/: __init__.py  kms.py
pyarrow-integration-tests/tests/: conftest.py  test_read_files.py
src/: crypto_factory.rs  key_encryption.rs  key_material.rs  key_unwrapper.rs  key_wrapper.rs  kms.rs  kms_manager.rs  lib.rs  test_kms.rs
tests/: round_trip.rs
