[workspace]

members = [
    "parquet-key-management",
    "generate-test-files",
]

resolver = "2"

[workspace.package]
version = "0.3.0"
homepage = "https://github.com/G-Research/parquet-key-management-rs"
repository = "https://github.com/G-Research/parquet-key-management-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
arrow = { version = ">=55.2", default-features = false }
arrow-array = { version = ">=55.2", default-features = false }
parquet = { version = ">=55.2", default-features = false, features = ["encryption"] }
