[workspace]
resolver = "2"
members = ["generate-test-files", "parquet-key-management"]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.88.0"
readme = "README.md"
homepage = "https://github.com/G-Research/parquet-key-management-rs"
repository = "https://github.com/G-Research/parquet-key-management-rs"
license = "Apache-2.0"

[workspace.dependencies]
arrow = { version = ">=57.2, <59", default-features = false }
arrow-array = { version = ">=57.2, <59", default-features = false }
arrow-schema = { version = ">=57.2, <59", default-features = false }
futures = { version = "0.3", default-features = false }
parquet = { version = ">=57.2, <59", default-features = false, features = ["encryption"] }
tempfile = { version = "3.24", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
