[package]
name = "generate-test-files"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
parquet-key-management = { version = "0.1.0", path = "../parquet-key-management", features = ["_test_utils"] }
arrow = { workspace = true }
arrow-array = { workspace = true }
parquet = { workspace = true, features = ["arrow", "snap"] }
