[package]
name = "generate-test-files"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
parquet-key-management = { path = "../parquet-key-management", features = ["_test_utils"] }
arrow = { workspace = true }
arrow-array = { workspace = true }
parquet = { workspace = true, features = ["arrow", "snap"] }
