[package]
name = "generate-test-files"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
parquet = { workspace = true, features = ["arrow", "snap"] }
parquet-key-management = { path = "../parquet-key-management", features = ["_test_utils"] }
