[package]
name = "parquet-key-management"
description = "Implements the Parquet Key Management Tools API in Rust to enable integration with a Key Management Server when using Parquet modular encryption."
keywords = ["parquet", "encryption", "kms", "arrow"]
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-trait = { version = "0.1" }
base64 = { version = "0.22", default-features = false, features = ["std"] }
parquet = { workspace = true }
ring = { version = "0.17", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
datafusion-execution = { git = "https://github.com/G-Research/datafusion.git", branch = "50-async-keyretriever", default-features = false, features = [
    "parquet_encryption",
], optional = true }
datafusion-common = { git = "https://github.com/G-Research/datafusion.git", branch = "50-async-keyretriever", default-features = false, features = [
    "parquet",
    "parquet_encryption",
], optional = true }
object_store = { version = "0.12.2", default-features = false, optional = true }
futures = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1.0", default-features = false, features = ["sync"], optional = true }

[dev-dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
datafusion = { git = "https://github.com/G-Research/datafusion.git", branch = "50-async-keyretriever", default-features = false, features = [
    "parquet",
    "parquet_encryption",
] }
parquet = { workspace = true, features = ["arrow"] }
tempfile = { workspace = true }
tokio = { version = "1.46", features = ["fs", "macros", "rt", "sync"] }

[features]
default = []
async = ["dep:futures", "dep:tokio", "parquet/async"]
datafusion = ["async", "dep:datafusion-execution", "dep:datafusion-common", "dep:object_store"]
_test_utils = []

[[test]]
name = "round_trip"
required-features = ["_test_utils"]

[[test]]
name = "async_round_trip"
required-features = ["_test_utils", "async"]

[[test]]
name = "integration_tests"
required-features = ["_test_utils"]

[[test]]
name = "key_material"
required-features = ["_test_utils"]

[[test]]
name = "datafusion_round_trip"
required-features = ["_test_utils", "datafusion"]
