[package]
name = "parquet-key-management"
description = "Implements the Parquet Key Management Tools API in Rust to enable integration with a Key Management Server when using Parquet modular encryption."
keywords = ["parquet", "encryption", "kms", "arrow"]
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { version = "0.1" }
base64 = { version = "0.22", default-features = false, features = ["std"] }
parquet = { workspace = true }
ring = { version = "0.17", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# optional
async-std = { version = "1", optional = true }
datafusion-execution = { version = "51.0", default-features = false, features = [
  "parquet_encryption",
], optional = true }
datafusion-common = { version = "51.0", default-features = false, features = [
  "parquet",
  "parquet_encryption",
], optional = true }
futures = { workspace = true, optional = true }
object_store = { version = "0.12.2", default-features = false, optional = true }
smol = { version = "2", default-features = false, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
async-compat = { version = "0.2", default-features = false }
datafusion = { version = "51.0", default-features = false, features = ["parquet", "parquet_encryption"] }
futures = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[features]
default = []
async = ["dep:futures"]
async-std = ["async", "dep:async-std"]
smol = ["async", "dep:smol"]
tokio = ["async", "dep:tokio"]
datafusion = ["dep:datafusion-execution", "dep:datafusion-common", "dep:object_store"]
_test_utils = []

[[test]]
name = "integration_tests"
required-features = ["_test_utils"]

[[test]]
name = "key_material"
required-features = ["_test_utils"]

[[test]]
name = "round_trip"
required-features = ["_test_utils"]

[[test]]
name = "async_round_trip"
required-features = ["_test_utils", "async"]

[[test]]
name = "datafusion_round_trip"
required-features = ["_test_utils", "datafusion"]
